tests/error/vararg_outside.gw
#! [contains] must be used inside variadic function
vararg;
